--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,35 @@
-# Basic
-title: 潘柏信
+﻿# Basic
+title: Teh-C
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: Teh-C
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: Qt / 嵌入式
+#url: "http://baixin.io"
 
 # Comment
-comment:
-    disqus: leopard
+#comment:
+#    disqus: leopard
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+#    weibo: 5366874726 
+    github: Teh-C
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 1020898982@qq.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
-baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+#baidu:
+#    id: 8ba1c6be0953b6f9c2ba38e57f615421  
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3   
-    host: auto  
+#    id: UA-84134159-3   
+#    host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
